@@ -234,6 +234,8 @@ GtkWidget *config_subtitle_font;
 GtkWidget *config_subtitle_scale;
 GtkWidget *config_subtitle_codepage;
 GtkWidget *config_subtitle_color;
+GtkWidget *config_subtitle_outline;
+GtkWidget *config_subtitle_shadow;
 
 GtkWidget *config_qt;
 GtkWidget *config_real;
